# FA

./: 1.h  CMakeLists.txt  README.md
allocator/allocator_boundary_tags/include/: allocator_boundary_tags.h
allocator/allocator_boundary_tags/src/: allocator_boundary_tags.cpp
allocator/allocator_boundary_tags/tests/: allocator_boundary_tags_tests.cpp
allocator/allocator_buddies_system/include/: allocator_buddies_system.h
allocator/allocator_buddies_system/src/: allocator_buddies_system.cpp
allocator/allocator_buddies_system/tests/: allocator_buddies_system_tests.cpp
allocator/allocator_global_heap/src/: allocator_global_heap.cpp
allocator/allocator_red_black_tree/include/: allocator_red_black_tree.h
allocator/allocator_red_black_tree/src/: allocator_red_black_tree.cpp
allocator/allocator_red_black_tree/tests/: allocator_red_black_tree_tests.cpp
allocator/allocator_sorted_list/include/: allocator_sorted_list.h
allocator/allocator_sorted_list/src/: allocator_sorted_list.cpp
allocator/allocator_sorted_list/tests/: allocator_sorted_list_tests.cpp
arithmetic/big_integer/include/: big_int.h
arithmetic/big_integer/src/: big_int.cpp
arithmetic/big_integer/tests/Karatsuba_multiplication/: Karatsuba_multiplication_tests.cpp
arithmetic/fraction/include/: fraction.h
arithmetic/fraction/src/: fraction.cpp
arithmetic/fraction/tests/: CMakeLists.txt  fraction_tests.cpp
associative_container/include/: associative_container.h
associative_container/search_tree/binary_search_tree/: CMakeLists.txt
associative_container/search_tree/binary_search_tree/AVL_tree/include/: AVL_tree.h
associative_container/search_tree/binary_search_tree/AVL_tree/tests/: AVL_tree_tests.cpp
associative_container/search_tree/binary_search_tree/include/: binary_search_tree.h  test
associative_container/search_tree/binary_search_tree/red_black_tree/include/: red_black_tree.h
associative_container/search_tree/binary_search_tree/red_black_tree/tests/: red_black_tree_tests.cpp
associative_container/search_tree/binary_search_tree/splay_tree/include/: splay_tree.h
associative_container/search_tree/binary_search_tree/tests/: CMakeLists.txt  a.cpp  binary_search_tree_tests.cpp
logger/client_logger/include/: client_logger.h
logger/client_logger/src/: client_logger.cpp  client_logger_builder.cpp
logger/server_logger/: CMakeLists.txt
logger/server_logger/include/: server_logger.h  server_logger_builder.h
logger/server_logger/src/: server_logger.cpp  server_logger_builder.cpp
logger/server_logger/tests/: CMakeLists.txt  server.cpp  server_logger_tests.cpp
(+8 files in other folders)
