add_executable(
        tst_bst
        binary_search_tree_tests.cpp
)
target_link_libraries(
        tst_bst
        PRIVATE
        gtest_main)
target_link_libraries(
        tst_bst
        PRIVATE
        mp_os_lggr_clnt_lggr)
target_link_libraries(
        tst_bst
        PRIVATE
        mp_os_allctr_allctr_srtd_lst)
target_link_libraries(
        tst_bst
        PRIVATE
        mp_os_assctv_cntnr_srch_tr_bnr_srch_tr)